--- a/pom.xml
+++ b/pom.xml
@@ -78,4 +78,15 @@
 		</plugins>
 	</build>
 
+	<distributionManagement>
+        <repository>
+            <id>maven-releases</id>
+            <url>http://13.201.94.143:8081/repository/maven-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>maven-snapshots</id>
+            <url>http://13.201.94.143:8081/repository/maven-snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
 </project>
