--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -3,10 +3,10 @@ kind: Deployment
 metadata:
   name: bank-app-deployment
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: bank-app
-  replicas: 2
   template:
     metadata:
       labels:
@@ -18,3 +18,10 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
+          env:
+            - name: SPRING_DATASOURCE_URL
+              value: jdbc:mysql://mysql-service:3306/bankappdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+            - name: SPRING_DATASOURCE_USERNAME
+              value: root
+            - name: SPRING_DATASOURCE_PASSWORD
+              value: Test@123
