--- a/k8s/database.yaml
+++ b/k8s/database.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: mysql
-          image: mysql:8
+          image: mysql:latest
           ports:
             - containerPort: 3306
           env:
